Navbar fixed not working on mobile, test2

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ nav {
     background-color: #f5f5f5;
     box-shadow: 0px 0px 0px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     position: fixed;
+    top: 0;
+    z-index: 999;
     /* position: fixed; */
 }
 /* .navbar-fixed {
